--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ repositories {
 }
 
 dependencies {
+    // Validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     // Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
